Create navigation bar for moboile and desktop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <nav class="nav-bar">
+      <ul>
+        <li>e-LIBRARY</li> 
+        <li><a><img src="img/plus-img.png">Add Title</a></li>
+        <li><a><img src="img/minus-img.png">Delete Title</a></li>
+      </ul>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>        
+        <span class="bar"></span> 
+      </div>  
+    </nav>
+  </header>
+
     
 </body>
 </html>
